# Amp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  cmake-multi-platform.yml  main.yml
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_VST2.cpp
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
